refactor: update deploy workflow to trigger on push and remove obsolete receive-update workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,14 +1,12 @@
 # .github/workflows/deploy.yml
 name: Deploy
 on:
-  workflow_run:
-    workflows: ["update_content"]  # name of the workflow to listen to
-    types: [completed]            # listen to the completed event
-    branches: [main]              # optional: only listen to main
+  push:
+    branches: [main]
+  workflow_dispatch:
 
 jobs:
   deploy:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     steps:
       # step 1: checkout edge repo
