--- a/docs/assets/.authors.yml
+++ b/docs/assets/.authors.yml
@@ -1,5 +1,5 @@
 authors:
-  <qihang>:
-    name: Qihang     # Author name
-    description: Learning By Doing # Author description
-    avatar: https://avatars.githubusercontent.com/u/148497514?v=4         # Author avatar
+  <jossie>:
+    name: Jossie Jiang    # Author name
+    description: Learning By Sleeping # Author description
+    avatar: https://avatars.githubusercontent.com/u/88167742?v=4  # Author avatar
